--- a/package.json
+++ b/package.json
@@ -3,30 +3,33 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "repository": "https://github.com/iugstav/Xpenses-backend.git",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register --ignore-watch node_modules src/server.ts"
   },
   "dependencies": {
-    "@prisma/client": "^3.11.0",
+    "@prisma/client": "^4.0.0",
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.13.2",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
-    "express": "^4.17.3",
+    "express": "^4.18.1",
     "helmet": "^5.0.2",
     "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/compression": "^1.7.2",
+    "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.21",
-    "prisma": "^3.11.0",
+    "prisma": "^4.0.0",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.14.1",
-    "typescript": "^4.6.2"
+    "typescript": "^4.7.4"
   }
 }
