--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "repository": "https://github.com/iugstav/Xpenses-backend.git",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register --ignore-watch node_modules src/server.ts"
+    "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register --ignore-watch node_modules src/server.ts",
+    "test": "jest"
   },
   "dependencies": {
     "@prisma/client": "^4.0.0",
@@ -20,14 +21,19 @@
     "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
+    "@swc/core": "^1.2.229",
+    "@swc/jest": "^0.2.22",
     "@types/bcryptjs": "^2.4.2",
     "@types/compression": "^1.7.2",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.6",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.21",
+    "jest": "^28.1.3",
     "prisma": "^4.0.0",
+    "ts-node": "^10.9.1",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.14.1",
     "typescript": "^4.7.4"
